# sage

./: .env.example  .gitignore  .prettierignore  BRANCH_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  PARITY.md  PHILOSOPHY.md  README.md  electron-builder.yml  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-nav-history.mjs  tsconfig.electron.json  vite.config.ts
.claude/: CLAUDE.md  settings.json
.github/: labeler.yml
.github/workflows/: ci-win7.yml  ci.yml  pr-label-check.yml  release-win7.yml  release.yml
archive/src-tauri-2026-06-13-main-migration/: Cargo.toml
archive/src-tauri-2026-06-13-win7-migration/: tauri.conf.json
archive/tech-docs-2026-06-13/: 20-win7-tauri-compat.md
backend/: config.yaml  environment.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-bundled.txt  requirements-dev.txt  requirements-py38.txt  requirements.txt  ruff.toml
backend/adapters/: __init__.py
backend/agents/: __init__.py  profiles.py
backend/api/: __init__.py  chat_stream_registry.py  hex_routes.py  legacy_routes.py  llm_proxy_routes.py  office_routes.py  orchestration_router.py  routes.py  scheduled_router.py  theme_router.py  wiki_routes.py
backend/application/: __init__.py
backend/config/: ghm.yaml
backend/core/: __init__.py  agent.py  agent_state.py  conventions.py  diagram_prompt.py  errors.py  exceptions.py  llm_client.py  orchestrator.py
backend/data/: agent_repo.py  blackboard_repo.py  database.py  orchestration_repo.py  session_repo.py  settings_canonicalizer.py  settings_repo.py
backend/domain/: __init__.py  agent.py  agent_event.py  compute.py  errors.py  exceptions.py  memory.py  message.py  skill.py  tool.py  tool_policy.py
backend/mcp/: __init__.py  client.py  config.py  tool.py
backend/memory/: __init__.py  chinese_tokenizer.py  consolidation.py  embedder.py  episodic.py  extractor.py  fusion.py  manager.py  registry.py  safety.py  semantic.py  vector_store.py  working.py
backend/office/: __init__.py  errors.py  excel.py  models.py  path_safety.py  ppt.py  storage.py  word.py
backend/orchestration/: __init__.py  approval_tokens.py  events.py  executor.py  heartbeat.py  lane_board.py  lane_registry.py  models.py  permission.py  planner.py  policy_engine.py  report_schema.py  router.py  task_registry.py  team_registry.py  ultragoal_store.py
backend/ports/: __init__.py  compute.py  llm.py  memory.py  observability.py  skill.py  storage.py  tool.py
backend/scheduler/: __init__.py  cron.py  evolution.py
backend/schemas/: common.py  theme.py
backend/services/: scheduler.py  theme_storage.py
backend/skills/: __init__.py  base.py  registry.py
backend/storage/: __init__.py  recent_projects.py
backend/tests/: conftest.py  test_agent_chat_assistant_message.py  test_agent_run_loop.py  test_agent_state.py  test_chat_stream.py  test_errors.py  test_health.py  test_llm_client_errors.py  test_llm_client_tools.py  test_routes_chat_errors.py  test_sessions.py
backend/tools/: __init__.py  base.py  calculator.py  file_tool.py  memory_tool.py  registry.py  skill.py  terminal.py  web_tool.py
backend/utils/: __init__.py  logging.py  otel.py
backend/wiki/: __init__.py  chat.py  community.py  context_budget.py  deep_research.py  embeddings.py  file_parser.py  frontmatter.py  graph.py  ingest.py  insights.py  lifecycle.py  llm_context.py  llm_prompts.py  mcp_server.py  models.py  rrf.py  search.py  vectorstore.py  vectorstore_hnsw.py  vision.py  vision_ingest.py  web_search.py
docs/: 01-overview.md  02-architecture.md  03-database.md  04-memory.md  05-agent.md  06-tools.md  07-skills.md  08-evolution.md  09-frontend.md  10-api.md  11-structure.md  12-plan.md  13-tool-system.md  14-error-handling.md  README.md  design.md
docs/philosophy/: anti-patterns.md  core-principles.md  decision-framework.md
docs/plans/: 2026-05-17-ai-agent-desktop-client.md  2026-05-28_ui-integration-css-variables.md  2026-05-29_sage-core-features.md  2026-05-30_llm-wiki.md  2026-06-01_sage-core-llm-conversation-foundation.md  2026-06-01_sage-next-features.md  2026-06-07_ghm-compute-integration.md  2026-06-12_finish-designed-features.md  2026-06-12_llm-wiki-llm-integration.md  2026-06-15_cross-platform-packaging.md  2026-06-17_llm-thinking-display.md  2026-06-18_drawio-integration.md  2026-06-18_skill-md-adapter.md  2026-06-19_ai-agent-memory-research.md  2026-06-19_enhancement-plans-overview.md  2026-06-19_formal-verification-maps.md  2026-06-19_mcp-lifecycle-management.md  2026-06-19_memory-integration-to-chatservice.md  2026-06-19_memory-optimization-plan.md  2026-06-19_multi-agent-coordination.md  2026-06-19_parity-alignment.md  2026-06-19_philosophy-document.md  2026-06-19_rag-service-extraction.md  2026-06-19_shared-core-library.md  2026-06-19_verification-map-system.md  2026-06-22_agent-orchestrator-wiring.md  2026-06-23_optimization-plan-aionui-reference.md  2026-06-26_llm-wiki-optimization.md  (+6 more)
e2e/: sidebar-skills-nav.spec.ts  wiki-chat-stream.spec.ts  wiki-folder-picker.spec.ts  wiki-ingest-stream.spec.ts
electron/: backendLauncher.ts  commands.ts  invoke.ts  logPaths.ts  logRotate.ts  logger.ts  main.ts  menu.ts  officeIpc.ts  officePaths.ts  preload.ts  relay.ts  showStartupFailureDialog.ts  skillsIpc.ts
scripts/: bundle-python-main.ps1  bundle-python.Tests.ps1  bundle-python.ps1  fetch-vcredist.ps1  fix-chrome-sandbox.sh  lint.sh  monitor_services.sh  patch-webkit2js.mjs  py38_compat_rewrite.py  pytest.sh  setup-branch-protection.sh  setup.bat  setup.sh  verify-office-paths.py
services/rag-service/: README.md  main.py  pyproject.toml
services/rag-service/api/: __init__.py  routes.py
services/rag-service/core/: __init__.py  storage.py
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/icons/: create_icons.py  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  python.rs  state.rs
src-tauri/src/wiki/: chat.rs  commands.rs  embeddings.rs  graph.rs  http.rs  ingest.rs  mod.rs  models.rs
(+781 files in other folders)
